# symmetrical-octo-garbanzo

./: CMakeLists.txt  Makefile.emscripten
include/: widget_cmobo_box.hpp
src/: StructInput.cpp  main.cpp  main_bak.cpp
